11.5.0 (15-04-2024)
- Refactor: Change invocation to create credit entries due to support for credit over exemptions [#qubIT-Fenix-5102]

11.4.2 (26-02-2024)
- Bug Fix: Remove atomic annotation in AcademicTreasuryEvent#getTreasuryEventDate method, which should be readonly [#ISCTE-FENIXEDU-419]

11.4.1 (01-02-2024)
- Improvement: Print credit entry academic information, if it is associated with treasury event [#qubIT-Fenix-4928]

11.4.0 (31-01-2024)
- Refactor: Change invocation of DebitEntry#create method to pass the finantial entity [#qubIT-Fenix-4587]
- Refactor: Remove deprecated ITreasuryBridgeAPI#createDebt [#qubIT-Fenix-4912]
- Bug Fix: Set of academical act blocking off and block academic acts on debt in standalone and extracurricular debit entries [#qubIT-Fenix-4914]

11.3.11 (24-01-2024)
- Refactor: Refactor ITreasuryPlatformDependentServices implementation [#qubIT-Fenix-4794]

11.3.10 (23-01-2024)
- Improvement: Declare methods to get refined entity objects in treasury report beans [#qubIT-Fenix-4794]

11.3.9 (18-01-2024)
- Refactor: Revert translation of exempted amount in portuguese [#qubIT-Fenix-4748]

11.3.8 (17-01-2024)
- Refactor: Change InvoiceEntry::getAssociatedFinantialEntity to InvoiceEntry::getFinantialEntity [#qubIT-Fenix-4587]

11.3.7 (12-01-2024)
- Improvement: Add method to AcademicTreasuryEvent, to calculate the registration tuition amount including other events that account for tuition [#UL-IGOT-1569]
- Bug Fix: Mark reservation tax event target as accounted for tuition, if it will discount in registration tuition amount [#UL-IGOT-1569]

11.3.6 (10-01-2024)
- Improvement: Add finantial entity information in debt reports [#qubIT-Fenix-4794]

11.3.5 (09-01-2024)
- Improvement: Add document certification information in debt reports [#qubIT-Fenix-4794]
- Bug Fix: Fill information in debt report for debit entries associated with custom academic debt treasury events [#qubIT-Fenix-4794]